syntax = "proto3";
package passage3d.claim.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/bank/v1beta1/genesis.proto";

option go_package = "github.com/envadiv/passage3d/x/claim/types";

// A Claim Records is the metadata of claim data per address
message ClaimRecord {
  // address of claim user
  string address = 1 [(gogoproto.moretags) = "yaml:\"address\""];

  // claimable amount for claim actions
  repeated cosmos.base.v1beta1.Coin claimable_amount = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"claimable_amount\""
  ];
  // true if action is completed
  // index of bool in array refers to action enum #
  repeated bool action_completed = 4 [
    (gogoproto.moretags) = "yaml:\"action_completed\""
  ];
}
